@@ -1,6 +1,5 @@
 package uk.gov.hmcts.reform.pip.account.management.utils;
 
-
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.restassured.common.mapper.TypeRef;
@@ -11,11 +10,9 @@ import uk.gov.hmcts.reform.pip.model.account.PiUser;
 import uk.gov.hmcts.reform.pip.model.account.Roles;
 import uk.gov.hmcts.reform.pip.model.account.UserProvenances;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ThreadLocalRandom;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
@@ -60,15 +57,18 @@ public class AccountHelperBase extends FunctionalTestBase {
         return response.getBody().as(PiUser.class);
     }
 
-    protected Response createAccount(String email, String provenanceId) throws JsonProcessingException {
-        return createAccount(email, provenanceId, Roles.VERIFIED, UserProvenances.PI_AAD);
+    protected Response createAccount(String email, String provenanceId, String requesterId)
+        throws JsonProcessingException {
+        return createAccount(email, provenanceId, Roles.VERIFIED, UserProvenances.PI_AAD, requesterId);
     }
 
-    protected Response createAccount(String email, String provenanceId, Roles role) throws JsonProcessingException {
-        return createAccount(email, provenanceId, role, UserProvenances.PI_AAD);
+    protected Response createAccount(String email, String provenanceId, Roles role, String requesterId)
+        throws JsonProcessingException {
+        return createAccount(email, provenanceId, role, UserProvenances.PI_AAD, requesterId);
     }
 
-    protected Response createAccount(String email, String provenanceId, Roles role, UserProvenances userProvenance)
+    protected Response createAccount(String email, String provenanceId, Roles role, UserProvenances userProvenance,
+                                     String requesterId)
         throws JsonProcessingException {
         PiUser piUser = new PiUser();
         piUser.setEmail(email);
@@ -78,20 +78,17 @@ public class AccountHelperBase extends FunctionalTestBase {
         piUser.setUserProvenance(userProvenance);
         piUser.setProvenanceUserId(provenanceId);
 
-        List<PiUser> users = new ArrayList<>();
-        users.add(piUser);
+        List<PiUser> users = List.of(piUser);
+        Map<String, String> authHeader = Map.of(ISSUER_ID, requesterId);
 
-        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ISSUER_ID, UUID.randomUUID().toString());
-
-        final Response createResponse = doPostRequest(CREATE_PI_ACCOUNT,
-                                                      headers, objectMapper.writeValueAsString(users));
+        final Response createResponse = doPostRequestForB2C(CREATE_PI_ACCOUNT, bearer, authHeader,
+                                                      objectMapper.writeValueAsString(users));
 
         assertThat(createResponse.getStatusCode()).isEqualTo(CREATED.value());
         return createResponse;
     }
 
     protected String getCreatedAccountUserId(Response response) {
-        return (String) response.getBody().as(CREATED_RESPONSE_TYPE).get(CreationEnum.CREATED_ACCOUNTS).get(0);
+        return (String) response.getBody().as(CREATED_RESPONSE_TYPE).get(CreationEnum.CREATED_ACCOUNTS).getFirst();
     }
 }
