@@ -9,6 +9,7 @@ import com.microsoft.graph.users.UsersRequestBuilder;
 import com.microsoft.graph.users.item.UserItemRequestBuilder;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -33,6 +34,8 @@ import uk.gov.hmcts.reform.pip.account.management.model.account.CreationEnum;
 import uk.gov.hmcts.reform.pip.account.management.model.account.PiUser;
 import uk.gov.hmcts.reform.pip.account.management.model.subscription.Subscription;
 import uk.gov.hmcts.reform.pip.account.management.model.subscription.usersubscription.UserSubscription;
+import uk.gov.hmcts.reform.pip.account.management.service.authorisation.AccountAuthorisationService;
+import uk.gov.hmcts.reform.pip.account.management.service.authorisation.SubscriptionAuthorisationService;
 import uk.gov.hmcts.reform.pip.account.management.utils.IntegrationTestBase;
 import uk.gov.hmcts.reform.pip.model.account.Roles;
 import uk.gov.hmcts.reform.pip.model.account.UserProvenances;
@@ -83,6 +86,8 @@ class TestingSupportApiTest extends IntegrationTestBase {
 
     private static final String ISSUER_HEADER = "x-issuer-id";
     private static final String ISSUER_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba2";
+    private static final String REQUESTER_HEADER = "x-requester-id";
+    private static final UUID REQUESTER_ID = UUID.randomUUID();
 
     private static final String EMAIL_PREFIX = "TEST_789_";
     private static final String EMAIL = EMAIL_PREFIX + "user123@test.com";
@@ -104,7 +109,6 @@ class TestingSupportApiTest extends IntegrationTestBase {
     private static final String LOCATION_NAME_PREFIX = "TEST_123_";
     private static final String LOCATION_NAME = "Court1";
     private static final String USER_ID_HEADER = "x-user-id";
-    private static final String ACTIONING_USER_ID = "1234-1234";
 
     private static final UUID USER_ID = UUID.fromString("87f907d2-eb28-42cc-b6e1-ae2b03f7bba5");
     private static final String CASE_ID = "T485913";
@@ -131,9 +135,25 @@ class TestingSupportApiTest extends IntegrationTestBase {
     @Mock
     private ClientConfiguration clientConfiguration;
 
+    @MockitoBean
+    private AccountAuthorisationService accountAuthorisationService;
+
+    @MockitoBean
+    private SubscriptionAuthorisationService subscriptionAuthorisationService;
+
     @BeforeAll
     static void startup() {
         OBJECT_MAPPER.findAndRegisterModules();
+    }
+
+    @BeforeEach
+    void beforeEachSetUp() {
+        when(accountAuthorisationService.userCanCreateAzureAccount(any())).thenReturn(true);
+        when(accountAuthorisationService.userCanViewAccounts(any())).thenReturn(true);
+        when(accountAuthorisationService.userCanViewAuditLogs(any())).thenReturn(true);
+        when(accountAuthorisationService.userCanCreateAccount(any(), any())).thenReturn(true);
+        when(subscriptionAuthorisationService.userCanAddSubscriptions(any(), any())).thenReturn(true);
+        when(subscriptionAuthorisationService.userCanViewSubscriptions(any(), any())).thenReturn(true);
     }
 
     @Test
@@ -168,9 +188,7 @@ class TestingSupportApiTest extends IntegrationTestBase {
 
         PiUser createdAccount = OBJECT_MAPPER.readValue(postResponse.getResponse().getContentAsString(), PiUser.class);
 
-        assertEquals(EMAIL, createdAccount.getEmail(),
-                     "Azure account creation error"
-        );
+        assertEquals(EMAIL, createdAccount.getEmail(), "Azure account creation error");
 
         //User mock setup
         when(graphClient.users()).thenReturn(usersRequestBuilder);
@@ -178,7 +196,8 @@ class TestingSupportApiTest extends IntegrationTestBase {
         when(userItemRequestBuilder.get()).thenReturn(new User());
 
         //Check whether account is created in Pi user table
-        MockHttpServletRequestBuilder getPiUserRequest = get(ACCOUNT_URL + createdAccount.getUserId());
+        MockHttpServletRequestBuilder getPiUserRequest = get(ACCOUNT_URL + createdAccount.getUserId())
+            .header(REQUESTER_HEADER, REQUESTER_ID);
 
         MvcResult responseGetUser = mockMvc.perform(getPiUserRequest).andExpect(status().isOk()).andReturn();
 
@@ -198,7 +217,8 @@ class TestingSupportApiTest extends IntegrationTestBase {
             .isEqualTo("1 account(s) deleted with email starting with " + EMAIL_PREFIX);
 
         //Check whether the user deleted in Pi user table
-        mockMvc.perform(get(ACCOUNT_URL + createdAccount.getUserId()))
+        mockMvc.perform(get(ACCOUNT_URL + createdAccount.getUserId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isNotFound());
     }
 
@@ -274,10 +294,12 @@ class TestingSupportApiTest extends IntegrationTestBase {
             .as("No account created")
             .hasSize(1);
 
-        String userId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0);
-        mockMvc.perform(get(ACCOUNT_URL + userId))
+        String userId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst();
+        mockMvc.perform(get(ACCOUNT_URL + userId)
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isOk());
 
+        when(accountAuthorisationService.userCanDeleteAccount(any(), any())).thenReturn(true);
         MvcResult deleteResponse = mockMvc.perform(delete(TESTING_SUPPORT_ACCOUNT_URL + EMAIL_PREFIX))
             .andExpect(status().isOk())
             .andReturn();
@@ -286,7 +308,9 @@ class TestingSupportApiTest extends IntegrationTestBase {
             .as("Media application delete response does not match")
             .isEqualTo("1 account(s) deleted with email starting with " + EMAIL_PREFIX);
 
-        mockMvc.perform(get(ACCOUNT_URL + userId))
+        when(accountAuthorisationService.userCanViewAccounts(any())).thenReturn(true);
+        mockMvc.perform(get(ACCOUNT_URL + userId)
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isNotFound());
     }
 
@@ -294,10 +318,13 @@ class TestingSupportApiTest extends IntegrationTestBase {
     void testTestingSupportDeleteApplicationsWithEmailPrefix() throws Exception {
         MediaApplication application = createApplication();
 
-        mockMvc.perform(get(APPLICATION_URL + "/" + application.getId()))
+        when(accountAuthorisationService.userCanViewMediaApplications(any())).thenReturn(true);
+        mockMvc.perform(get(APPLICATION_URL + "/" + application.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isOk());
 
-        MvcResult deleteResponse = mockMvc.perform(delete(TESTING_SUPPORT_APPLICATION_URL + EMAIL_PREFIX))
+        MvcResult deleteResponse = mockMvc.perform(delete(TESTING_SUPPORT_APPLICATION_URL + EMAIL_PREFIX)
+            .header(ISSUER_HEADER, ISSUER_ID))
             .andExpect(status().isOk())
             .andReturn();
 
@@ -305,7 +332,9 @@ class TestingSupportApiTest extends IntegrationTestBase {
             .as("Media application delete response does not match")
             .isEqualTo("1 media application(s) deleted with email starting with " + EMAIL_PREFIX);
 
-        mockMvc.perform(get(APPLICATION_URL + "/" + application.getId()))
+        when(accountAuthorisationService.userCanViewMediaApplications(any())).thenReturn(true);
+        mockMvc.perform(get(APPLICATION_URL + "/" + application.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isNotFound());
     }
 
@@ -316,7 +345,7 @@ class TestingSupportApiTest extends IntegrationTestBase {
 
         MockHttpServletRequestBuilder postRequest = MockMvcRequestBuilders.post(SUBSCRIPTION_PATH)
             .content(OBJECT_MAPPER.writeValueAsString(subscription))
-            .header(USER_ID_HEADER, ACTIONING_USER_ID)
+            .header(USER_ID_HEADER, USER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         mockMvc.perform(postRequest)
@@ -330,7 +359,8 @@ class TestingSupportApiTest extends IntegrationTestBase {
             .as("Subscription response does not match")
             .isEqualTo("1 subscription(s) deleted for location name starting with " + LOCATION_NAME_PREFIX);
 
-        MvcResult mvcResult = mockMvc.perform(get(String.format(SUBSCRIPTION_BY_USER_PATH,  USER_ID))).andReturn();
+        MvcResult mvcResult = mockMvc.perform(get(String.format(SUBSCRIPTION_BY_USER_PATH,  USER_ID))
+                                                  .header(USER_ID_HEADER, USER_ID)).andReturn();
         UserSubscription userSubscription =
             OBJECT_MAPPER.readValue(mvcResult.getResponse().getContentAsString(), UserSubscription.class);
 
@@ -343,7 +373,8 @@ class TestingSupportApiTest extends IntegrationTestBase {
     void testTestingSupportDeleteAuditLogsWithEmailPrefix() throws Exception {
         AuditLog auditLog = createAuditLog();
 
-        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId()))
+        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isOk());
 
         MvcResult deleteResponse = mockMvc.perform(delete(TESTING_SUPPORT_AUDIT_URL + EMAIL_PREFIX))
@@ -354,7 +385,8 @@ class TestingSupportApiTest extends IntegrationTestBase {
             .as("Audit Log delete response does not match")
             .isEqualTo("2 audit log(s) deleted with user email starting with " + EMAIL_PREFIX);
 
-        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId()))
+        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isNotFound());
     }
 
@@ -363,10 +395,12 @@ class TestingSupportApiTest extends IntegrationTestBase {
         AuditLog auditLog = createAuditLog();
         LocalDate expiredDate = auditLog.getTimestamp().minusDays(200).toLocalDate();
 
-        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId()))
+        mockMvc.perform(get(AUDIT_URL + "/" + auditLog.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isOk());
 
-        MvcResult updateAudit = mockMvc.perform(put(TESTING_SUPPORT_AUDIT_URL + auditLog.getId()))
+        MvcResult updateAudit = mockMvc.perform(put(TESTING_SUPPORT_AUDIT_URL + auditLog.getId())
+            .header(REQUESTER_HEADER, REQUESTER_ID))
             .andExpect(status().isOk())
             .andReturn();
 
